Add task search and Kafka event publishing