@@ -3,7 +3,9 @@ package com.example.tasktracker.service;
 import com.example.tasktracker.dto.CreateTaskDto;
 import com.example.tasktracker.dto.TaskDto;
 import com.example.tasktracker.exception.ResourceNotFoundException;
+import com.example.tasktracker.exception.ValidationException;
 import com.example.tasktracker.mapper.TaskMapper;
+import com.example.tasktracker.messaging.TaskEventProducer;
 import com.example.tasktracker.model.Category;
 import com.example.tasktracker.model.Task;
 import com.example.tasktracker.model.TaskType;
@@ -11,19 +13,32 @@ import com.example.tasktracker.model.User;
 import com.example.tasktracker.repository.CategoryRepository;
 import com.example.tasktracker.repository.TaskRepository;
 import com.example.tasktracker.repository.UserRepository;
+import com.example.taskcontracts.event.TaskEventType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TaskServiceTest {
@@ -40,6 +55,9 @@ class TaskServiceTest {
     @Mock
     private TaskMapper taskMapper;
 
+    @Mock
+    private TaskEventProducer taskEventProducer;
+
     @InjectMocks
     private TaskService taskService;
 
@@ -47,12 +65,13 @@ class TaskServiceTest {
 
     @BeforeEach
     void setUp() {
-        User user = User.builder().id(1L).build();
+        User user = User.builder().id(1L).email("john@example.com").build();
         Category category = Category.builder().id(1L).name("Work").build();
 
         task = Task.builder()
                 .id(1L)
                 .title("Do work")
+                .deadline(LocalDateTime.of(2026, 3, 20, 12, 0))
                 .status("TODO")
                 .type(TaskType.OTHER)
                 .user(user)
@@ -67,7 +86,8 @@ class TaskServiceTest {
         when(userRepository.findById(1L)).thenReturn(Optional.of(task.getUser()));
         when(categoryRepository.findById(1L)).thenReturn(Optional.of(task.getCategory()));
         when(taskRepository.save(any(Task.class))).thenReturn(task);
-        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, null, "TODO", TaskType.OTHER, 1L, 1L));
+        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, task.getDeadline(), "TODO",
+                TaskType.OTHER, 1L, 1L));
 
         TaskDto result = taskService.createTask(dto);
 
@@ -78,47 +98,64 @@ class TaskServiceTest {
         assertEquals(1L, result.categoryId());
         verify(taskMapper).toEntity(dto);
         verify(taskMapper).toDto(task);
+        verify(taskEventProducer).sendTaskEvent(TaskEventType.CREATED, task);
     }
 
     @Test
-    void getAllTasks_NoCategory() {
-        when(taskRepository.findAll()).thenReturn(List.of(task));
-        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, null, "TODO", TaskType.OTHER, 1L, 1L));
+    void getTasks_WithFiltersAndPaging() {
+        PageRequest pageRequest = PageRequest.of(0, 5, org.springframework.data.domain.Sort.Direction.DESC, "deadline");
+        when(taskRepository.searchTasks(
+                eq("Work"),
+                eq(TaskType.WORK),
+                eq("IN_PROGRESS"),
+                eq(LocalDate.of(2026, 3, 1).atStartOfDay()),
+                eq(LocalDate.of(2026, 3, 31).plusDays(1).atStartOfDay().minusNanos(1)),
+                eq(pageRequest)))
+                .thenReturn(new PageImpl<>(List.of(task), pageRequest, 1));
+        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, task.getDeadline(), "TODO",
+                TaskType.OTHER, 1L, 1L));
 
-        List<TaskDto> results = taskService.getAllTasks(null);
+        Page<TaskDto> results = taskService.getTasks(
+                "Work",
+                TaskType.WORK,
+                "IN_PROGRESS",
+                LocalDate.of(2026, 3, 1),
+                LocalDate.of(2026, 3, 31),
+                0,
+                5,
+                "deadline",
+                "desc");
 
-        assertEquals(1, results.size());
-        assertEquals("Do work", results.get(0).title());
-        verify(taskMapper).toDto(task);
+        assertEquals(1, results.getTotalElements());
+        assertEquals("Do work", results.getContent().getFirst().title());
+        verify(taskRepository).searchTasks(
+                "Work",
+                TaskType.WORK,
+                "IN_PROGRESS",
+                LocalDate.of(2026, 3, 1).atStartOfDay(),
+                LocalDate.of(2026, 3, 31).plusDays(1).atStartOfDay().minusNanos(1),
+                pageRequest);
     }
 
     @Test
-    void getAllTasks_WithCategory() {
-        when(taskRepository.findByCategoryNameIgnoreCase("Work")).thenReturn(List.of(task));
-        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, null, "TODO", TaskType.OTHER, 1L, 1L));
-
-        List<TaskDto> results = taskService.getAllTasks("Work");
-
-        assertEquals(1, results.size());
-        assertEquals("Do work", results.get(0).title());
-        verify(taskMapper).toDto(task);
-    }
-
-    @Test
-    void getAllTasks_WithCategoryAndType() {
-        when(taskRepository.findByCategoryNameIgnoreCaseAndType("Work", TaskType.WORK)).thenReturn(List.of(task));
-        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, null, "TODO", TaskType.OTHER, 1L, 1L));
-
-        List<TaskDto> results = taskService.getAllTasks("Work", TaskType.WORK);
-
-        assertEquals(1, results.size());
-        verify(taskRepository).findByCategoryNameIgnoreCaseAndType("Work", TaskType.WORK);
+    void getTasks_WhenDateRangeInvalid() {
+        assertThrows(ValidationException.class, () -> taskService.getTasks(
+                null,
+                null,
+                null,
+                LocalDate.of(2026, 3, 31),
+                LocalDate.of(2026, 3, 1),
+                0,
+                10,
+                "id",
+                "asc"));
     }
 
     @Test
     void getTaskById() {
         when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
-        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, null, "TODO", TaskType.OTHER, 1L, 1L));
+        when(taskMapper.toDto(task)).thenReturn(new TaskDto(1L, "Do work", null, task.getDeadline(), "TODO",
+                TaskType.OTHER, 1L, 1L));
 
         TaskDto result = taskService.getTaskById(1L);
 
@@ -137,7 +174,7 @@ class TaskServiceTest {
     void updateTask() {
         task.setType(TaskType.WORK);
         TaskDto dto = new TaskDto(null, "Updated title", "Updated description", null, "IN_PROGRESS", null, 2L, 3L);
-        User updatedUser = User.builder().id(2L).build();
+        User updatedUser = User.builder().id(2L).email("updated@example.com").build();
         Category updatedCategory = Category.builder().id(3L).name("Home").build();
         Task updatedTask = Task.builder()
                 .id(1L)
@@ -154,7 +191,8 @@ class TaskServiceTest {
         when(categoryRepository.findById(3L)).thenReturn(Optional.of(updatedCategory));
         when(taskRepository.save(task)).thenReturn(updatedTask);
         when(taskMapper.toDto(updatedTask))
-                .thenReturn(new TaskDto(1L, "Updated title", "Updated description", null, "IN_PROGRESS", TaskType.WORK, 2L, 3L));
+                .thenReturn(new TaskDto(1L, "Updated title", "Updated description", null, "IN_PROGRESS",
+                        TaskType.WORK, 2L, 3L));
 
         TaskDto result = taskService.updateTask(1L, dto);
 
@@ -163,6 +201,7 @@ class TaskServiceTest {
         assertEquals(TaskType.WORK, result.type());
         assertEquals(2L, result.userId());
         assertEquals(3L, result.categoryId());
+        verify(taskEventProducer).sendTaskEvent(TaskEventType.UPDATED, updatedTask);
     }
 
     @Test
@@ -195,18 +234,18 @@ class TaskServiceTest {
 
     @Test
     void deleteTask_WhenExists() {
-        when(taskRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(taskRepository).deleteById(1L);
+        when(taskRepository.findById(1L)).thenReturn(Optional.of(task));
 
         assertDoesNotThrow(() -> taskService.deleteTask(1L));
-        verify(taskRepository, times(1)).deleteById(1L);
+        verify(taskRepository, times(1)).delete(task);
+        verify(taskEventProducer).sendTaskEvent(TaskEventType.DELETED, task);
     }
 
     @Test
     void deleteTask_WhenNotExists() {
-        when(taskRepository.existsById(1L)).thenReturn(false);
+        when(taskRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(ResourceNotFoundException.class, () -> taskService.deleteTask(1L));
-        verify(taskRepository, never()).deleteById(1L);
+        verify(taskRepository, never()).delete(any(Task.class));
     }
 }
